# auri

./: .gitignore  .travis.yml  LICENSE  README.md  auri.py  local_test.sh  pyproject.toml  requirements.txt  setup.py
auri/: __init__.py  __main__.py  ambilight.py  ambilight_controller.py  aurora.py  aurora_finder.py  command_line.py  config.py  device_finder.py  device_manager.py  effect.py  effects.py
